# napari-qute

./: README.md  setup.cfg
napari_qute/: napari.yaml
