[metadata]
name = napari-qute
version = 0.0.1
author = Aaron Ponti
author_email = aaron.ponti@bsse.ethz.ch
description = "`qute` napari plugin."
license = Apache-2.0
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.entry_points]
napari.manifest =
    napari-qute = napari_qute:napari.yaml
